[gd_scene load_steps=8 format=3 uid="uid://duu4bqop2klq2"]

[ext_resource type="Script" uid="uid://c5g50cmk71bdp" path="res://script/main_menu_scene.gd" id="1_vfskp"]
[ext_resource type="FontFile" uid="uid://dbdvbgducoq2q" path="res://ARCADE.TTF" id="1_xhf6x"]
[ext_resource type="AudioStream" uid="uid://dcmwjk1ryb4ji" path="res://Sfx/Street Fighter II SNES-Opening Title.mp3" id="3_7hcs8"]

[sub_resource type="LabelSettings" id="LabelSettings_vfskp"]
font = ExtResource("1_xhf6x")
font_size = 117

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vfskp"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(1, 540, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
spread = 0.0
initial_velocity_min = -10.0
initial_velocity_max = -10.0
gravity = Vector3(0, 0, 0)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7hcs8"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(1, 540, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
spread = 0.0
initial_velocity_min = -25.0
initial_velocity_max = -25.0
gravity = Vector3(0, 0, 0)
scale_min = 3.5
scale_max = 3.5

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sb6w7"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(1, 540, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
spread = 0.0
initial_velocity_min = -45.0
initial_velocity_max = -45.0
gravity = Vector3(0, 0, 0)
scale_min = 7.0
scale_max = 7.0

[node name="main menu" type="Node2D"]
script = ExtResource("1_vfskp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 672.0
offset_top = 306.0
offset_right = 1280.0
offset_bottom = 428.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "START MENU"
label_settings = SubResource("LabelSettings_vfskp")

[node name="button manager" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/button manager"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.44200003
anchor_right = 0.44200003
offset_left = -152.73602
offset_top = 17.0
offset_right = 255.26398
offset_bottom = 309.0
theme_override_constants/separation = 29

[node name="Start" type="Button" parent="VBoxContainer/button manager/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xhf6x")
theme_override_font_sizes/font_size = 70
text = " START "

[node name="Grade Level" type="Button" parent="VBoxContainer/button manager/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xhf6x")
theme_override_font_sizes/font_size = 70
text = "GRADE LEVEL"

[node name="quit" type="Button" parent="VBoxContainer/button manager/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xhf6x")
theme_override_font_sizes/font_size = 70
text = "QUIT"

[node name="StarFieldBack" type="GPUParticles2D" parent="."]
z_index = -100
position = Vector2(1974, 537)
amount = 1500
lifetime = 500.0
preprocess = 380.0
process_material = SubResource("ParticleProcessMaterial_vfskp")

[node name="StarFieldMiddle" type="GPUParticles2D" parent="."]
z_index = -95
position = Vector2(1968, 544)
amount = 350
lifetime = 500.0
preprocess = 380.0
process_material = SubResource("ParticleProcessMaterial_7hcs8")

[node name="StarFieldFront" type="GPUParticles2D" parent="."]
z_index = -80
position = Vector2(1959, 533)
amount = 50
lifetime = 500.0
preprocess = 380.0
process_material = SubResource("ParticleProcessMaterial_sb6w7")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7hcs8")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="VBoxContainer/button manager/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/button manager/VBoxContainer/Grade Level" to="." method="_on_grade_level_pressed"]
[connection signal="pressed" from="VBoxContainer/button manager/VBoxContainer/quit" to="." method="_on_quit_pressed"]
